Adjust focus outline on summary elements

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -164,6 +164,11 @@ a {
   outline-style: solid;
 }
 
+/* On summary elements, put outline on inside */
+summary:focus {
+  outline-offset: -.4em;
+}
+
           /* Reusable buttons etc */
 
 .btn-primary {
