--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,83 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
+:root {
+  --color-primary: hsl(239, 84%, 67%);
+  --color-white: hsl(0, 0%, 100%);
+  --color-gray-100: hsl(225, 100%, 98%);
+  --color-gray-200: hsl(226, 68%, 96%);
+  --color-gray-300: hsl(228, 35%, 92%);
+  --color-gray-400: hsl(229, 25%, 86%);
+  --color-gray-500: hsl(231, 16%, 75%);
+  --color-gray-600: hsl(231, 14%, 63%);
+  --color-gray-700: hsl(234, 14%, 39%);
+  --color-gray-800: hsl(235, 20%, 25%);
+  --color-gray-900: hsl(223, 39%, 7%);
+  --color-bg-white: var(--color-white);
+  --color-bg-dark: var(--color-gray-900);
+  --color-paragraph-whitebg: var(--color-gray-700);
+  --color-paragraph-darkbg: rgba(255, 255, 255, 70%);
+  --color-heading-darkbg: var(--color-white);
+  --color-heading-whitebg: var(--color-gray-900);
+  --color-navlink-whitebg: var(--color-gray-800);
+  --color-navlink-darkbg: hsl(from var(--color-white) h s calc(l - 15));
+  --color-bg-dlbtn-whitebg: var(--color-gray-900);
+  --color-bg-dlbtn-darkbg: var(--color-gray-200);
+  --color-chevronbg-whitebg: var(--color-white);
+  --color-chevronbg-darkbg: #222032;
+  --color-chevronarrow-whitebg: var(--color-gray-800);
+  --color-chevronarrow-darkbg: var(--color-white);
+  --color-brandlogo-border-whitebg: var(--color-gray-300);
+  --color-brandlogo-border-darkbg: rgba(255, 255, 255, 15%);
+  --color-brandlogo-bg-darkbg-tablet: #131022;
+  --color-brandlogo-bg-darkbg-desktop: var(--color-gray-900);
+  --color-features-body: hsl(0, 0%, 30%);
+  --color-feature-cards-img-bg-bgwhite: var(--color-gray-100);
+  --color-feature-cards-img-bg-bgdark: #171B25;
+  --color-how-bg-white: var(--color-gray-100);
+  --color-how-bg-dark: #151822;
+  --color-reviewsbg-whitebg: var(--color-gray-100);
+  --color-reviewsbg-darkbg: #151822;
+  --color-reviewbg-whitebg: var(--color-white);
+  --color-reviewbg-darkbg: #1E212B;
+  --color-reviewrole-whitebg: var(--color-gray-600);
+  --color-reviewrole-darkbg: #8E9095;
+  --color-faqbg-whitebg: var(--color-bg-white);
+  --color-faqbg-darkbg: #151822;
+  --color-faqbg-darkbg-mobile: #131022;
+  --color-faqoutline-whitebg: #e2e5f1;
+  --color-faqoutline-darkbg: #363443;
+  --color-faqchevronbg-whitebg: var(--color-gray-100);
+  --color-faqchevronbg-darkbg: #1E212B;
+  --color-faqchevronarrow-whitebg: var(--color-gray-800);
+  --color-faqchevronarrow-darkbg: var(--color-white);
+  --color-subscribebg-whitebg: var(--color-gray-100);
+  --color-subscribebg-darkbg: var(--color-faqbg-darkbg);
+}
+
+:root {
+  /* Default theme - white/light */
+  --color-bg: var(--color-bg-white);
+  --color-navlink: var(--color-navlink-whitebg);
+  --color-burger: var(--color-gray-800);
+  --color-heading: var(--color-heading-whitebg);
+  --color-paragraph: var(--color-paragraph-whitebg);
+  --color-switch-bg: var(--color-gray-600);
+  --color-bg-dlbtn: var(--color-bg-dlbtn-whitebg);
+  --color-chevronbg: var(--color-chevronbg-whitebg);
+  --color-chevronarrow: var(--color-chevronarrow-whitebg);
+  --color-brandlogo-border: var(--color-brandlogo-border-whitebg);
+  --color-feature-cards-img-bg: var(--color-feature-cards-img-bg-bgwhite);
+  --color-how-bg: var(--color-how-bg-white);
+  --color-reviewsbg: var(--color-reviewsbg-whitebg);
+  --color-reviewbg: var(--color-reviewbg-whitebg);
+  --color-reviewrole: var(--color-reviewrole-whitebg);
+  --color-faqbg: var(--color-faqbg-whitebg);
+  --color-faqoutline: var(--color-faqoutline-whitebg);
+  --color-faqchevronbg: var(--color-faqchevronbg-whitebg);
+  --color-faqchevronarrow: var(--color-faqchevronarrow-whitebg);
+  --color-subscribebg: var(--color-subscribebg-whitebg);
+  --color-subscribetext: var(--color-paragraph-whitebg);
+}
+
 * {
   padding: 0;
   margin: 0;
