--- a/css/scss/utilities/_wrappers.scss
+++ b/css/scss/utilities/_wrappers.scss
@@ -24,3 +24,8 @@
     padding-inline: 0;
   }
 }
+
+.themewrapper {
+  background-color: var(--color-bg);
+  transition: var(--transition-theme);
+}
