--- a/css/scss/components/_buttons.scss
+++ b/css/scss/components/_buttons.scss
@@ -6,6 +6,20 @@
   color: var(--color-white);
 }
 
+.btn-signin {
+  @extend .btn-primary;
+  width: 140px;
+  height: 36px;
+  font-size: var(--fs-body-s);
+  font-weight: var(--fw-semi);
+  padding: 0px;
+  border-radius: 4px;
+  
+  .usericon {
+    margin-right: 0.5rem;
+  }
+}
+
 .btn-chevron {
   @include btn-chevron;
 }
