--- a/css/main.css
+++ b/css/main.css
@@ -143,14 +143,6 @@ summary:focus-visible {
   outline-offset: -0.4em;
 }
 
-/* When visually hidden checkbox is in focus, put outline on toggle switch */
-body:has(.darkmode-checkboxes:focus-visible) .dm-toggle-switch {
-  outline-color: var(--color-primary);
-  outline-offset: 0.2em;
-  outline-width: 0.4em;
-  outline-style: solid;
-}
-
 a {
   color: var(--color-primary);
   text-decoration: none;
@@ -214,6 +206,36 @@ a:hover {
   font-size: 0.75rem;
 }
 
+.burger-menu {
+  display: grid;
+  /* Use template-rows to hide/reveal menu, instead of max-height */
+  grid-template-rows: 0fr;
+  justify-content: center;
+  transition: var(--transition-theme);
+}
+.burger-menu .burger-nav {
+  /* Add some padding to make sure there's room for focus border/outline */
+  padding-inline: 1rem;
+  text-align: center;
+  /* Make sure items are hidden when menu is closed */
+  overflow: hidden;
+}
+.burger-menu .burger-nav.reveal-aria {
+  display: none;
+}
+.burger-menu ul {
+  margin: 4rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+  list-style: none;
+  /* Apply padding to a-elements without imgs (i.e. no buttons) */
+}
+.burger-menu ul a:not(:has(img)) {
+  padding: 1rem;
+}
+
 .jump-to-main {
   display: inline-block;
   padding: 1rem;
@@ -227,6 +249,32 @@ a:hover {
 }
 .jump-to-main:focus {
   left: 0;
+}
+
+.dm-toggle-switch {
+  display: inline-block;
+  position: relative;
+  width: 46px;
+  height: 24px;
+}
+.dm-toggle-switch .dmswitchbg {
+  position: absolute;
+  cursor: pointer;
+  inset: 0;
+  border-radius: 46px;
+  background-color: var(--color-switch-bg);
+  transition: var(--transition-theme);
+}
+.dm-toggle-switch .dmswitchbg::before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 4px;
+  bottom: 3px;
+  border-radius: 50%;
+  background-color: var(--color-white);
+  transition: var(--transition-theme);
 }
 
 .visually-hidden {
@@ -293,4 +341,69 @@ a:hover {
 
 :root {
   --header-pt: .75rem;
+}
+
+/* When visually hidden checkbox is in focus, put outline on toggle switch */
+body:has(.darkmode-checkboxes:focus-visible) .dm-toggle-switch {
+  outline-color: var(--color-primary);
+  outline-offset: 0.2em;
+  outline-width: 0.4em;
+  outline-style: solid;
+}
+
+/* Apply outline to burgermenubtn when checkbox is focused */
+header#nav:has(#burger-toggle:focus-visible) .btn-burger {
+  outline-color: var(--color-primary);
+  outline-offset: 0.2em;
+  outline-width: 0.4em;
+  outline-style: solid;
+}
+
+header#nav:has(#burger-toggle:checked) {
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  background-color: var(--color-bg);
+}
+header#nav:has(#burger-toggle:checked) .burger-menu-open {
+  display: none;
+}
+header#nav:has(#burger-toggle:checked) .burger-menu-close {
+  display: block;
+}
+header#nav:has(#burger-toggle:checked) .burger-menu {
+  grid-template-rows: 1fr;
+  box-shadow: 0 25px 15px var(--color-bg);
+}
+header#nav:has(#burger-toggle:checked) .burger-nav.reveal-aria {
+  display: block;
+}
+header#nav:has(#burger-toggle:checked) .burger-nav.hide-aria {
+  display: none;
+}
+
+.main-navbar {
+  justify-content: space-between;
+  padding-top: var(--header-pt);
+  /* Hide in mobile */
+  /* Remove extra pixels on bottom of logo image */
+}
+.main-navbar #navbar-links, .main-navbar .btn-signin {
+  display: none;
+}
+.main-navbar .logo-img {
+  vertical-align: bottom;
+}
+.main-navbar .navbar-right {
+  position: relative;
+}
+.main-navbar .dm-text {
+  font-size: var(--fs-body-m);
+  font-weight: var(--fw-semi);
+  color: var(--color-gray-700);
+  margin-right: 1rem;
+  /* Hide on mobile */
+  display: none;
+}
+.main-navbar .btn-signin {
+  margin-left: 2rem;
 }
