--- a/css/main.css
+++ b/css/main.css
@@ -277,6 +277,29 @@ a:hover {
   transition: var(--transition-theme);
 }
 
+.btn-burger {
+  display: flex;
+  justify-content: center;
+  /* Set width to avoid div changing width when icon is changed */
+  width: 1.5rem;
+  margin-left: 2rem;
+  margin-right: 0.5rem;
+  background-color: transparent;
+  border: none;
+  font-size: 1.5rem;
+  color: var(--color-burger);
+}
+.btn-burger label {
+  /* Add some padding to make it easier to click on touch devices */
+  padding: 0.3rem;
+}
+.btn-burger label:hover {
+  cursor: pointer;
+}
+.btn-burger .burger-menu-close {
+  display: none;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
