--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
 :root {
+  --fs-d1: 5rem;
+  --fs-d2: 4.5rem;
+  --fs-d3: 4rem;
+  --fs-d4: 3.5rem;
+  --fs-d5: 3rem;
+  --fs-d6: 2.625rem;
+  --fs-h1: 2.5rem;
+  --fs-h2: 2rem;
+  --fs-h3: 1.75rem;
+  --fs-h4: 1.5rem;
+  --fs-h5: 1.25rem;
+  --fs-h6: 1rem;
+  --fs-body-l: 1.125rem;
+  --fs-body-m: 1rem;
+  --fs-body-s: .875rem;
+  --fs-hero-headline-mobile: 2.125rem;
+  --fs-hero-headline-tablet: 2.75rem;
+  --fs-hero-headline-desktop: var(--fs-d4);
+  --fw-extra: 800;
+  --fw-bold: 700;
+  --fw-semi: 600;
+  --fw-reg: 400;
+}
+
+:root {
   --color-primary: hsl(239, 84%, 67%);
   --color-white: hsl(0, 0%, 100%);
   --color-gray-100: hsl(225, 100%, 98%);
@@ -112,13 +137,13 @@
 body, input, button, textarea, select {
   font-family: "Manrope", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: var(fw-reg);
   font-style: normal;
-  font-size: 1rem;
+  font-size: var(fs-body-m);
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: 800;
+  font-weight: var(--fw-extra);
   line-height: 1.3;
 }
 
@@ -480,7 +505,7 @@ section#hero {
 .hero-container .headline {
   grid-area: hero-headline;
   text-align: center;
-  font-size: 2.125rem;
+  font-size: var(--fs-hero-headline-mobile);
   margin-top: 1.5rem;
 }
 .hero-container .content {
