--- a/css/scss/sections/_hero.scss
+++ b/css/scss/sections/_hero.scss
@@ -21,7 +21,7 @@ section#hero {
   .headline {
     grid-area: hero-headline;
     text-align: center;
-    font-size: $fs-hero-headline-mobile;
+    font-size: var(--fs-hero-headline-mobile);
     margin-top: 1.5rem;    
   }
   .content {
