--- a/css/main.css
+++ b/css/main.css
@@ -110,24 +110,187 @@
   display: none;
 }
 
-/* Darkmode toggle-switch stuff */
-/* In preferred-color-scheme light, hide darkbg label & box */
-#label-darkmode-switch-lightbg {
-  display: flex;
+/* Darkmode media queries
+** Unfortunately these have to be repeated for each prefers-color-scheme
+** Would've liked to use something like below, but doesn't seem possible 
+** (@media (pcs:l) && :has(whitebg:checked)) ||
+** (@media (pcs:d) && :has(darkbg:checked)) {
+**    --DMstuff
+** } 
+** Should be possible with container style query, but no firefox support yet */
+@media (prefers-color-scheme: light) {
+  body:has(#darkmode-switch-whitebg:checked) .themewrapper {
+    --color-bg: var(--color-bg-dark);
+    --color-navlink: var(--color-navlink-darkbg);
+    --color-burger: var(--color-white);
+    --color-heading: var(--color-heading-darkbg);
+    --color-paragraph: var(--color-paragraph-darkbg);
+    --color-bg-dlbtn: var(--color-bg-dlbtn-darkbg);
+    --color-chevronbg: var(--color-chevronbg-darkbg);
+    --color-chevronarrow: var(--color-chevronarrow-darkbg);
+    --color-brandlogo-border: var(--color-brandlogo-border-darkbg);
+    --color-feature-cards-img-bg: var(--color-feature-cards-img-bg-bgdark);
+    --color-how-bg: var(--color-how-bg-dark);
+    --color-reviewsbg: var(--color-reviewsbg-darkbg);
+    --color-reviewbg: var(--color-reviewbg-darkbg);
+    --color-reviewrole: var(--color-reviewrole-darkbg);
+    --color-faqbg: var(--color-faqbg-darkbg-mobile);
+    --color-faqoutline: var(--color-faqoutline-darkbg);
+    --color-faqchevronbg: var(--color-faqchevronbg-darkbg);
+    --color-faqchevronarrow: var(--color-faqchevronarrow-darkbg);
+    --color-subscribebg: var(--color-subscribebg-darkbg);
+    /* Change themeswitch-bg to active color */
+    --color-switch-bg: var(--color-primary);
+    /* Swap to light-texted logo */
+    /* Set darkmode switch to active position */
+    /* In width 768px+ and darkmode, remove shadow from FAQ
+    **  and apply border on open details elements*/
+  }
+  body:has(#darkmode-switch-whitebg:checked) .themewrapper .logo-img {
+    content: url("/assets/logo-bgdark.svg");
+  }
+  body:has(#darkmode-switch-whitebg:checked) .themewrapper section#hero {
+    background: linear-gradient(0deg, rgba(99, 102, 241, 0.1) 0%, rgba(218, 70, 239, 0.05) 50%, rgb(19, 16, 34) 100%);
+  }
+  body:has(#darkmode-switch-whitebg:checked) .themewrapper .hero-container .pitch {
+    color: var(--color-white);
+  }
+  body:has(#darkmode-switch-whitebg:checked) .themewrapper .review {
+    box-shadow: unset;
+  }
+  body:has(#darkmode-switch-whitebg:checked) .themewrapper .chevron-dn-img {
+    content: url("/assets/icons/chevron-dn-dark.svg");
+  }
+  body:has(#darkmode-switch-whitebg:checked) .themewrapper .btn-apple-img {
+    content: url("/assets/appstorebadges/appstore-dark.svg");
+  }
+  body:has(#darkmode-switch-whitebg:checked) .themewrapper .btn-google-img {
+    content: url("/assets/appstorebadges/googleplay-dark.svg");
+  }
+  body:has(#darkmode-switch-whitebg:checked) .themewrapper .dmswitchbg::before {
+    transform: translateX(20px);
+  }
 }
-
-#label-darkmode-switch-darkbg {
-  display: none;
+@media (prefers-color-scheme: light) and (768px <= width) {
+  body:has(#darkmode-switch-whitebg:checked) .themewrapper .features-container .brandlogo {
+    background-color: var(--color-brandlogo-bg-darkbg-tablet);
+  }
+  body:has(#darkmode-switch-whitebg:checked) .themewrapper .faq-accordion details {
+    box-shadow: none;
+    background-color: var(--color-faqbg-darkbg);
+  }
+  body:has(#darkmode-switch-whitebg:checked) .themewrapper .faq-accordion details[open] {
+    border: 1px solid #383A43;
+  }
 }
-
-#darkmode-switch-whitebg {
-  display: block;
+@media (prefers-color-scheme: light) and (1400px <= width) {
+  body:has(#darkmode-switch-whitebg:checked) .themewrapper .features-container .brandlogo {
+    background-color: var(--color-brandlogo-bg-darkbg-desktop);
+  }
+  body:has(#darkmode-switch-whitebg:checked) .themewrapper .features-container .card-img-container {
+    background-color: #12162A;
+  }
+  body:has(#darkmode-switch-whitebg:checked) .themewrapper .subscribe input {
+    background-color: #191D27;
+    color: var(--color-paragraph-darkbg);
+    border-color: #42464D;
+  }
 }
-
-#darkmode-switch-darkbg {
-  display: none;
+/* Auto-enable darkmode if user has prefers-color-scheme: dark */
+@media (prefers-color-scheme: dark) {
+  body:has(#darkmode-switch-darkbg:checked) .themewrapper {
+    --color-bg: var(--color-bg-dark);
+    --color-navlink: var(--color-navlink-darkbg);
+    --color-burger: var(--color-white);
+    --color-heading: var(--color-heading-darkbg);
+    --color-paragraph: var(--color-paragraph-darkbg);
+    --color-bg-dlbtn: var(--color-bg-dlbtn-darkbg);
+    --color-chevronbg: var(--color-chevronbg-darkbg);
+    --color-chevronarrow: var(--color-chevronarrow-darkbg);
+    --color-brandlogo-border: var(--color-brandlogo-border-darkbg);
+    --color-feature-cards-img-bg: var(--color-feature-cards-img-bg-bgdark);
+    --color-how-bg: var(--color-how-bg-dark);
+    --color-reviewsbg: var(--color-reviewsbg-darkbg);
+    --color-reviewbg: var(--color-reviewbg-darkbg);
+    --color-reviewrole: var(--color-reviewrole-darkbg);
+    --color-faqbg: var(--color-faqbg-darkbg-mobile);
+    --color-faqoutline: var(--color-faqoutline-darkbg);
+    --color-faqchevronbg: var(--color-faqchevronbg-darkbg);
+    --color-faqchevronarrow: var(--color-faqchevronarrow-darkbg);
+    --color-subscribebg: var(--color-subscribebg-darkbg);
+    /* Change themeswitch-bg to active color */
+    --color-switch-bg: var(--color-primary);
+    /* Swap to light-texted logo */
+    /* Set darkmode switch to active position */
+    /* In width 768px+ and darkmode, remove shadow from FAQ
+    **  and apply border on open details elements*/
+  }
+  body:has(#darkmode-switch-darkbg:checked) .themewrapper .logo-img {
+    content: url("/assets/logo-bgdark.svg");
+  }
+  body:has(#darkmode-switch-darkbg:checked) .themewrapper section#hero {
+    background: linear-gradient(0deg, rgba(99, 102, 241, 0.1) 0%, rgba(218, 70, 239, 0.05) 50%, rgba(19, 16, 34, 0.01) 100%);
+  }
+  body:has(#darkmode-switch-darkbg:checked) .themewrapper .hero-container .pitch {
+    color: var(--color-white);
+  }
+  body:has(#darkmode-switch-darkbg:checked) .themewrapper .review {
+    box-shadow: unset;
+  }
+  body:has(#darkmode-switch-darkbg:checked) .themewrapper .chevron-dn-img {
+    content: url("/assets/icons/chevron-dn-dark.svg");
+  }
+  body:has(#darkmode-switch-darkbg:checked) .themewrapper .btn-apple-img {
+    content: url("/assets/appstorebadges/appstore-dark.svg");
+  }
+  body:has(#darkmode-switch-darkbg:checked) .themewrapper .btn-google-img {
+    content: url("/assets/appstorebadges/googleplay-dark.svg");
+  }
+  body:has(#darkmode-switch-darkbg:checked) .themewrapper .dmswitchbg::before {
+    transform: translateX(20px);
+  }
+  /* In preferred scheme dark, display pre-checked darkbg checkbox and label
+  and hide unchecked whitebg checkbox */
 }
-
+@media (prefers-color-scheme: dark) and (768px <= width) {
+  body:has(#darkmode-switch-darkbg:checked) .themewrapper .features-container .brandlogo {
+    background-color: var(--color-brandlogo-bg-darkbg-tablet);
+  }
+  body:has(#darkmode-switch-darkbg:checked) .themewrapper .faq-accordion details {
+    box-shadow: none;
+    background-color: var(--color-faqbg-darkbg);
+  }
+  body:has(#darkmode-switch-darkbg:checked) .themewrapper .faq-accordion details[open] {
+    border: 1px solid #383A43;
+  }
+}
+@media (prefers-color-scheme: dark) and (1400px <= width) {
+  body:has(#darkmode-switch-darkbg:checked) .themewrapper .features-container .brandlogo {
+    background-color: var(--color-brandlogo-bg-darkbg-desktop);
+  }
+  body:has(#darkmode-switch-darkbg:checked) .themewrapper .features-container .card-img-container {
+    background-color: #12162A;
+  }
+  body:has(#darkmode-switch-darkbg:checked) .themewrapper .subscribe input {
+    background-color: #191D27;
+    color: var(--color-paragraph-darkbg);
+    border-color: #42464D;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  #label-darkmode-switch-darkbg {
+    display: flex;
+  }
+  #label-darkmode-switch-whitebg {
+    display: none;
+  }
+  #darkmode-switch-darkbg {
+    display: block;
+  }
+  #darkmode-switch-whitebg {
+    display: none;
+  }
+}
 * {
   padding: 0;
   margin: 0;
