--- a/css/scss/components/_links.scss
+++ b/css/scss/components/_links.scss
@@ -6,3 +6,15 @@ a {
     color: var(--color-primary);
   }
 }
+
+.navbar-link {
+  color: var(--color-navlink);
+  font-weight: var(--fw-semi);
+  opacity: var(--navlink-opacity);
+  transition: var(--transition-default);
+  
+  &:hover {
+    color: var(--color-primary);
+    text-decoration: none;
+  }
+}
