--- a/css/scss/components/_index.scss
+++ b/css/scss/components/_index.scss
@@ -3,3 +3,5 @@
 @forward './burgermenu';
 @forward './jumptomain';
 @forward './dmtoggleswitch';
+@forward './brandlogo';
+@forward './featurecard';
